src/corelib/io/qfsfileengine_win.cpp
@@ -27,6 +27,8 @@
 #define SECURITY_WIN32
 #include <security.h>
 
+#include <memory>
+
 #ifndef PATH_MAX
 #define PATH_MAX FILENAME_MAX
 #endif
@@ -392,6 +394,36 @@ bool QFSFileEnginePrivate::nativeIsSequential() const
     DWORD fileType = GetFileType(handle);
     return (fileType == FILE_TYPE_CHAR)
             || (fileType == FILE_TYPE_PIPE);
+}
+
+bool QFSFileEnginePrivate::nativeRenameOverwrite(const QString &newName) const
+{
+    if (fileHandle == INVALID_HANDLE_VALUE)
+        return false;
+    QFileSystemEntry newEntry(newName, QFileSystemEntry::FromInternalPath());
+    const QString newFilePath = newEntry.nativeFilePath();
+    const size_t nameByteLength = newFilePath.length() * sizeof(wchar_t);
+    if (nameByteLength + sizeof(wchar_t) > std::numeric_limits<DWORD>::max())
+        return false;
+
+    constexpr size_t RenameInfoSize = sizeof(FILE_RENAME_INFO);
+    const size_t renameDataSize = RenameInfoSize + nameByteLength + sizeof(wchar_t);
+    QVarLengthArray<char> v(qsizetype(renameDataSize), 0);
+
+    auto *renameInfo = q20::construct_at(reinterpret_cast<FILE_RENAME_INFO *>(v.data()));
+    auto renameInfoRAII = qScopeGuard([&] { std::destroy_at(renameInfo); });
+    renameInfo->ReplaceIfExists = TRUE;
+    renameInfo->RootDirectory = nullptr;
+    renameInfo->FileNameLength = DWORD(nameByteLength);
+    memcpy(renameInfo->FileName, newFilePath.data(), nameByteLength);
+
+    bool res = SetFileInformationByHandle(fileHandle, FileRenameInfo, renameInfo,
+                                          DWORD(renameDataSize));
+#if 0
+    if (!res)
+        qErrnoWarning("QFSFileEnginePrivate::nativeRenameOverwrite failed");
+#endif
+    return res;
 }
 
 bool QFSFileEngine::caseSensitive() const
